added social media widgets

--- a/index.html
+++ b/index.html
@@ -173,7 +173,46 @@
                 </div>
             </div>
             <!-- Secondary charts end -->
-
+            <!-- Social widgets start -->
+            <div class="social container">
+                <h2>Social Stats</h2>
+                <div class="social-stats">
+                    <div class="social-widget">
+                        <div class="social-icon twitter">
+                            <svg class="medium-size">
+                                <use xlink:href="#icon-twitter"></use>
+                            </svg>
+                        </div>
+                        <div class="social-platform">
+                            <h3>Twitter</h3>
+                            <span>10,345</span>
+                        </div>
+                    </div>
+                    <div class="social-widget">
+                        <div class="social-icon facebook">
+                            <svg class="medium-size">
+                                <use xlink:href="#icon-facebook"></use>
+                            </svg>
+                        </div>
+                        <div class="social-platform">
+                            <h3>Facebook</h3>
+                            <span>8,739</span>
+                        </div>
+                    </div>
+                    <div class="social-widget">
+                        <div class="social-icon googleplus">
+                            <svg class="medium-size">
+                                <use xlink:href="#icon-google-plus"></use>
+                            </svg>
+                        </div>
+                        <div class="social-platform">
+                            <h3>Google+</h3>
+                            <span>2,530</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Social widgets end -->
 
 
 
