Added two new member widgets

--- a/index.html
+++ b/index.html
@@ -214,6 +214,109 @@
             </div>
             <!-- Social widgets end -->
 
+            <!-- Members Section starts -->
+            <div class="members-widget">
+                <!-- New Members widget starts -->
+                <div class="new-members container">
+                    <h2>New Members</h2>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/christina-mills.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-info">
+                            <h4>Christina Mills</h4>
+                            <span>christina.mills49@example.com</span>
+                        </div>
+                        <div class="date">
+                            <span>14/08/17</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/liam-alvarez.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-info">
+                            <h4>Liam Alvarez</h4>
+                            <span>liam.alvarez64@example.com</span>
+                        </div>
+                        <div class="date">
+                            <span>14/08/17</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/phyllis-chapman.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-info">
+                            <h4>Phyllis Chapman</h4>
+                            <span>phyllis.chapman63@example.com</span>
+                        </div>
+                        <div class="date">
+                            <span>13/08/17</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/glen-wade.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-info">
+                            <h4>Glen Wade</h4>
+                            <span>glen.wade72@example.com</span>
+                        </div>
+                        <div class="date">
+                            <span>12/08/17</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- New Members widget ends -->
+
+                <!-- Recent Activity widget starts -->
+                <div class="new-members container">
+                    <h2>Recent Activity</h2>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/clara-carlson.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-activity">
+                            <h4>Clara Carlson</h4>
+                            <span class="activity">commented on Vorsiche's SEO Tips</span>
+                            <span class="time">4 hours ago</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/julio-howard.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-activity">
+                            <h4>Julio Howard</h4>
+                            <span class="activity">liked the post Facebook's Changes for 2017</span>
+                            <span class="time">5 hours ago</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/nathan-horton.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-activity">
+                            <h4>Nathan Horton</h4>
+                            <span class="activity">commented on Facebook's Changes for 2017</span>
+                            <span class="time">5 hours ago</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member-img">
+                            <img class="rounded preview-img-size" src="img/tracey-medina.jpg" alt="profile picture">
+                        </div>
+                        <div class="member-activity">
+                            <h4>Tracey Medina</h4>
+                            <span class="activity">posted Vorsiche's SEO Tips</span>
+                            <span class="time">1 day ago</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Recent Activity widget starts -->
+            </div>
+            <!-- Members Section ends -->
 
 
 
