--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         </div>
                         <div class="member-info">
                             <h4>Christina Mills</h4>
-                            <span>christina.mills49@example.com</span>
+                            <span><a href="mailto:christina.mills49@example.com">christina.mills49@example.com</a></span>
                         </div>
                         <div class="date">
                             <span>14/08/17</span>
@@ -237,7 +237,7 @@
                         </div>
                         <div class="member-info">
                             <h4>Liam Alvarez</h4>
-                            <span>liam.alvarez64@example.com</span>
+                            <span><a href="mailto:liam.alvarez64@example.com">liam.alvarez64@example.com</a></span>
                         </div>
                         <div class="date">
                             <span>14/08/17</span>
@@ -249,7 +249,7 @@
                         </div>
                         <div class="member-info">
                             <h4>Phyllis Chapman</h4>
-                            <span>phyllis.chapman63@example.com</span>
+                            <span><a href="mailto:phyllis.chapman63@example.com">phyllis.chapman63@example.com7</a></span>
                         </div>
                         <div class="date">
                             <span>13/08/17</span>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="member-info">
                             <h4>Glen Wade</h4>
-                            <span>glen.wade72@example.com</span>
+                            <span><a href="mailto:glen.wade72@example.com">glen.wade72@example.com</a></span>
                         </div>
                         <div class="date">
                             <span>12/08/17</span>
