--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         </div>
 
                         <select id="timezone">
-                            <option value="na" selected>Select Timezone</option>
+                            <option value="" disable="" selected="">Select Timezone</option>
                             <option value="-12.0">(GMT -12:00) Eniwetok, Kwajalein</option>
                             <option value="-11.0">(GMT -11:00) Midway Island, Samoa</option>
                             <option value="-10.0">(GMT -10:00) Hawaii</option>
